--- a/index.html
+++ b/index.html
@@ -22,21 +22,23 @@
                     <span class="strip"></span>
                 </button>
                 <ul id="nav-menu-container">
-                    <li><a href="#"> Culinaria</a></li>
-                    <li><a href="#"> Alquimia</a></li>
-                    <li><a href="#"> Processo</a></li>
-                    <li><a href="#"> Corte</a></li>
-                    <li><a href="#"> Contato</a></li>
+                    <li><a href="#" class="letter"> LifeSkill 1</a></li>
+                    <li><a href="#" class="letter"> LifeSkill 2</a></li>
+                    <li><a href="#" class="letter"> LifeSkill 3</a></li>
+                    <li><a href="#" class="letter"> LifeSkill 4</a></li>
+                    <li><a href="#" class="letter"> LifeSkill 5</a></li>
                 </ul>
             </nav>
-            <div id="search">
-                <label for="search-btn">
-                    <input name="search-btn" type="text" id="search-button" placeholder="Search">
+            <div id="search-login-register"
+                <div id="search">
+                    <label for="search-btn">
+                        <input name="search-btn" type="text" id="search-button" placeholder="Search">
 
-                </label>
-            </div>
-            <div id="login-register-menu">
-                <button id="login-register-button">Login/Register</button>
+                    </label>
+                </div>
+                <div id="login-register-menu">
+                    <button id="login-register-button">Login/Register</button>
+                </div>
             </div>
         </div>
 
