--- a/index.html
+++ b/index.html
@@ -29,16 +29,14 @@
                     <li><a href="#" class="letter"> LifeSkill 5</a></li>
                 </ul>
             </nav>
-            <div id="search-login-register"
-                <div id="search">
-                    <label for="search-btn">
-                        <input name="search-btn" type="text" id="search-button" placeholder="Search">
+            <div id="search-login-register">
+                <label for="search-btn">
+                    <input name="search-btn" type="text" id="search-button" placeholder="Search">
 
-                    </label>
-                </div>
-                <div id="login-register-menu">
-                    <button id="login-register-button">Login/Register</button>
-                </div>
+                </label>
+            </div>
+            <div id="login-register-menu">
+                <button id="login-register-button">Login/Register</button>
             </div>
         </div>
 
